Update LongPoweredPrimes.java